WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270891
[MSE] ManagedMediaSource isn't usable in a DedicatedWorker
https://bugs.webkit.org/show_bug.cgi?id=270891
Summary
[MSE] ManagedMediaSource isn't usable in a DedicatedWorker
Jean-Yves Avenard [:jya]
Reported
2024-03-12 18:35:35 PDT
STR: 1-
https://jyavenard.github.io/mse-in-workers-demo/mse-in-workers-demo.html
2- Click on Start Demo when using Managed MSE, the sourceopen event is never fired, even if "disableremoteplayback" attribute has been added.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-12 20:13:28 PDT
<
rdar://problem/124499286
>
Jean-Yves Avenard [:jya]
Comment 2
2024-03-12 20:27:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25804
EWS
Comment 3
2024-03-15 00:01:55 PDT
Committed
276140@main
(321003e22c50): <
https://commits.webkit.org/276140@main
> Reviewed commits have been landed. Closing PR #25804 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug