LayoutTests/media/media-source/worker/worker.js
@@ -1,0 +1,16 @@
+function logToMain(msg) {
+    postMessage({topic: 'info', arg: msg});
+}
+
+onmessage = (e) => {
+    const ms = new ManagedMediaSource();
+    const handle = ms.handle;
+
+    ms.onsourceopen = () => {
+        logToMain("sourceopen event received");
+    };
+    // Transfer the MediaSourceHandle to the main thread for use in attaching to
+    // the main thread media element that will play the content being buffered
+    // here in the worker.
+    postMessage({topic: 'handle', arg: handle}, [handle]);
+};
